--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoanBee - Welcome</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="icon" type="image/x-icon" href="~/images/favicon.ico" />
     <style>
         body {
 
